# dp

./: .gitignore  README.md  ROADMAP.md
code/: .env.example  pyproject.toml  requirements.txt
code/notebooks/: colab_dreamer.ipynb
code/scripts/: run_rollout.py
code/shapley_dreamer/: settings.py
code/shapley_dreamer/agent/: actor_critic.py  imagination.py
code/shapley_dreamer/envs/: __init__.py  sot.py
code/shapley_dreamer/llm/: __init__.py  base.py  factory.py  hf.py  mock.py  prompts.py
code/shapley_dreamer/shapley/: __init__.py  base.py  counterfactual.py  exact.py  factory.py  imagined.py  permutation_mc.py
code/shapley_dreamer/tasks/: __init__.py  base.py  factory.py  word_problem.py
code/shapley_dreamer/training/: dreamer_loop.py  metrics.py  rollout.py  trajectory.py
code/shapley_dreamer/world_model/: encoder.py  model.py  training.py
docs/key_papers/en/: dreamerv3.md  ppo.md  scar.md  shapley_ml_survey.md  (+1 more)
experiments/01_vanilla_vs_shapley/: README.md  curves.json  rollouts.jsonl
notebooks/: 00_smoke_test.ipynb
presentation_260515/: speech.en.md  speech.sk.md
tests/: test_actor_critic.py  test_counterfactual.py  test_dreamer_loop.py  test_imports_smoke.py  test_llm_base.py  test_llm_hf_smoke.py  test_metrics.py  test_prompts.py  test_rollout.py  test_settings.py  test_shapley.py  test_sot_env.py  test_tasks.py  test_wm_encoder.py  test_wm_model.py
thesis/: references.bib
thesis/en/: abstract.tex  main.tex  motivation.tex  terminology.tex
thesis/sk/: abstract.tex  conclusion.tex  main.tex  motivation.tex  terminology.tex
(+10 files in other folders)
